fixed mobile overflowing Xaxis

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,26 +4,30 @@
 }
 
 html{
-    min-height:100%;
+   min-height: 100vh;
+   height: 100%;
     margin:0;
     padding:0;
     border:0;
-    position: relative;
+    overflow-x:hidden;
    } 
    
    body{ 
       overflow-x:hidden;
-      height: 100%;
+      position: relative;
+      min-height: 100%;
    display: flex;
    flex-direction: column;
    margin: 0;
    padding:0;
    border:0;
-   background-image: url('../assets/bg.svg');
+   /* background-image: url('../assets/bg.svg'); */
    background-size: cover;
+   background-image: url('../assets/sprinkle.svg');
    font-family: 'JetBrains Mono', monospace;  
 }
 .sprinkle{
+   background-size: cover;
    background-image: url('../assets/sprinkle.svg');
 }
 
